<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_light"
    tools:context=".ActivitySignup">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="130dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_signup"
            android:ems="10"
            android:fontFamily="@font/oxygenfont"
            android:gravity="center"
            android:hint="@string/ad"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="130dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_signup"
            android:ems="10"
            android:fontFamily="@font/oxygenfont"
            android:gravity="center"
            android:hint="@string/soyad"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_signup"
            android:ems="10"
            android:fontFamily="@font/oxygenfont"
            android:gravity="center"
            android:hint="@string/kullaniciadi"
            android:inputType="textPersonName"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_signup"
            android:ems="10"
            android:fontFamily="@font/oxygenfont"
            android:gravity="center"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_signup"
            android:ems="10"
            android:fontFamily="@font/oxygenfont"
            android:gravity="center"
            android:hint="@string/email"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/buttonKayit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/oxygenfont"
            android:text="Kayıt ol"
            android:textColor="#FFFFFF"
            android:textSize="60dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left">

        <Button
            android:id="@+id/button_login_in_signup"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_right"
            android:fontFamily="@font/oxygenfont"
            android:paddingRight="20dp"
            android:text="Giriş Yap"
            android:textColor="#FFFFFF"
            android:textSize="24dp" />
    </LinearLayout>
</LinearLayout>