<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    android:orientation="vertical"
    tools:context=".ActivityLogin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/bubble"
            android:ems="10"
            android:fontFamily="@font/oxygenfont"
            android:gravity="center"
            android:hint="@string/kullaniciadi"
            android:inputType="textPersonName"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bubble"
            android:ems="10"
            android:fontFamily="@font/oxygenfont"
            android:gravity="center"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B3FFFFFF"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/oxygenfont"
            android:text="@string/giris"
            android:textColor="@color/white"
            android:textSize="60dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/bubble_left"
            android:fontFamily="@font/oxygenfont"
            android:paddingLeft="20dp"
            android:text="Kayıt ol"
            android:textColor="#FFFFFF"
            android:textSize="24dp" />
    </LinearLayout>

</LinearLayout>